--- a/src/valine-ex.scss
+++ b/src/valine-ex.scss
@@ -7,8 +7,8 @@
 .valine {
   * {
     box-sizing: border-box;
-    //font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", 微软雅黑, "helvetica neue", helvetica, ubuntu, roboto, noto, "segoe ui", Arial, sans-serif;
-    //font-size: 16px;
+    // font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", 微软雅黑, "helvetica neue", helvetica, ubuntu, roboto, noto, "segoe ui", Arial, sans-serif;
+    // font-size: 16px;
     line-height: 1.42857143;
     color: #555;
     transition: all .3s ease;
@@ -19,7 +19,7 @@
     outline: none;
     padding: 10px 0;
     max-width: 100%;
-    font-size:.775rem;
+    font-size: .775rem;
   }
   .vwrap {
     border: 1px solid #f0f0f0;
@@ -27,25 +27,20 @@
     margin-bottom: 10px;
     overflow: hidden;
     position: relative;
-    padding:10px;
+    padding: 10px;
     input {
       background: transparent;
     }
-    .vheader{
-      .vinput{
-        width:33.33%;
-        border-bottom:1px #dedede dashed;
+    .vheader {
+      display: flex;
+      .vinput {
+        width: 33.33333333%;
+        border-bottom: 1px #dedede dashed;
       }
-      &.item2 .vinput {
-        width: 50%;
+      .vinput:focus {
+        border-bottom-color: #eb5055;
       }
-      &.item1 .vinput {
-        width: 100%;
-      }
-      .vinput:focus{
-        border-bottom-color:#eb5055;
-      }
-      @media screen and (max-width:520px) {
+      @media screen and (max-width: 520px) {
         .vinput {
           width: 100%;
         }
@@ -55,64 +50,30 @@
       }
     }
     .vcontrol {
-      //background: #fdfdfd;
+      // background: #fdfdfd;
       font-size: 0;
-      .col{
-        display:inline-block;
-        font-size:.725rem;
+      .col {
+        display: inline-block;
+        font-size: .725rem;
         vertical-align: middle;
-        color:#ccc;
-        &.text-right{
-          text-align:right;
+        color: #ccc;
+        &.text-right {
+          text-align: right;
         }
-        svg{
+        svg {
           margin-right: 2px;
           overflow: hidden;
           fill: currentColor;
           vertical-align: middle;
         }
-        &.col-40{
-          width:40%;
+        &.col-40 {
+          width: 40%;
         }
-        &.col-60{
-          width:60%;
+        &.col-60 {
+          width: 60%;
         }
-        &.split{
-          width:50%;
-        }
-      }
-    }
-    .vmark {
-      position: absolute;
-      background: rgba(0, 0, 0, .65);
-      width: 100%;
-      height: 100%;
-      left: 0;
-      top: 0;
-      .valert {
-        padding-top: 3rem;
-        .vtext {
-          color: #fff;
-          padding: 1rem 0;
-        }
-        .vcode {
-          width: 4.6875rem;
-          border-radius: .3125rem;
-          padding:.5rem;
-          background: #dedede;
-          &:focus {
-            border-color: #3090e4;
-            background-color: #fff;
-          }
-        }
-      }
-      @media screen and(max-width:720px) {
-        .valert {
-          padding-top: 5.5rem;
-          .vtext {
-            color: #fff;
-            padding: 1rem 0;
-          }
+        &.split {
+          width: 50%;
         }
       }
     }
@@ -169,8 +130,8 @@
   .veditor {
     width: 100%;
     height: 8.75rem;
-    font-size:.875rem;
-    background:transparent;
+    font-size: .875rem;
+    background: transparent;
   }
   .vbtn {
     transition-duration: .4s;
@@ -208,19 +169,19 @@
     color: #999;
   }
   .vlist {
-    width:100%;
+    width: 100%;
     .vcard {
       padding-top: 1.5rem;
       position: relative;
-      display:block;
-      &:after{
-        content:'';
-        clear:both;
-        display:block;
+      display: block;
+      &:after {
+        content: '';
+        clear: both;
+        display: block;
       }
       .vimg {
-        width:2.5rem;
-        height:2.5rem;
+        width: 2.5rem;
+        height: 2.5rem;
         float: left;
         border-radius: 50%;
         margin-right: .7525rem;
@@ -233,7 +194,7 @@
           font-size: .8135rem;
           font-weight: 700;
           color: rgb(44, 32, 32);
-          margin-right:.875rem;
+          margin-right: .875rem;
           &:hover {
             color: #D7191A;
           }
@@ -250,18 +211,18 @@
       }
       section {
         overflow: hidden;
-        padding-bottom:1.5rem;
-        border-bottom:1px solid #f5f5f5;
+        padding-bottom: 1.5rem;
+        border-bottom: 1px solid #f5f5f5;
         section {
           padding-bottom: 0;
           border-bottom: none;
         }
-        .vfooter{
-          position:relative;
+        .vfooter {
+          position: relative;
           .vtime {
             color: #b3b3b3;
             font-size: .75rem;
-            margin-right:.875rem;
+            margin-right: .875rem;
           }
           .vat {
             font-size: .8125rem;
@@ -278,13 +239,13 @@
         font-size: .875rem;
         line-height: 2;
         position: relative;
-        margin-bottom:.75rem;
+        margin-bottom: .75rem;
         a {
           font-size: .875rem;
-          color:#708090;
+          color: #708090;
           text-decoration: double;
-          &:hover{
-            color:#D7191A;
+          &:hover {
+            color: #D7191A;
           }
         }
         pre,
