--- a/src/valine-ex.scss
+++ b/src/valine-ex.scss
@@ -71,9 +71,8 @@
           border-radius: 20px;
           display: inline-block;
           background: rgba(0, 0, 0, .1);
-          transition: all .4s;
           user-select: none;
-          img {
+          .vimg {
             border-radius: 50%;
             vertical-align: middle;
           }
@@ -82,10 +81,6 @@
             &:last-child {
               margin-right: 15px;
             }
-          }
-          &:hover {
-            box-shadow: 5px 0 5px rgba(0, 0, 0, .1);
-            transition: all .4s;
           }
         }
         button {
@@ -382,6 +377,18 @@
     display: inline-block;
     -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
     animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  }
+  .vicon {
+    display: block;
+    background: url("https://s1.hdslb.com/bfs/static/jinkela/space/images/user-auth.png");
+    position: absolute;
+    left: 24px;
+    top: 48px;
+    &.auth {
+      width: 18px;
+      height: 18px;
+      background-position: -5px -82px;
+    }
   }
   .spinner .r2 {
     -webkit-animation-delay: -1.1s;
