fix tab & focus bug

--- a/src/valine-ex.scss
+++ b/src/valine-ex.scss
@@ -18,8 +18,8 @@
     resize: none;
     outline: none;
     padding: 10px 0;
-    max-width: 100%;
     font-size: .775rem;
+    min-width: 0;
   }
   .vwrap {
     border: 1px solid #f0f0f0;
