--- a/src/valine-ex.scss
+++ b/src/valine-ex.scss
@@ -7,7 +7,7 @@
 .valine {
   * {
     box-sizing: border-box;
-    // font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", 微软雅黑, "helvetica neue", helvetica, ubuntu, roboto, noto, "segoe ui", Arial, sans-serif;
+    font-family: miranafont, "Hiragino Sans GB", STXihei, "Microsoft YaHei", SimSun, sans-serif;
     // font-size: 16px;
     line-height: 1.42857143;
     color: #555;
@@ -114,6 +114,41 @@
         }
         &.split {
           width: 50%;
+        }
+        a {
+          margin-right: 20px;
+          display: inline-block;
+          transition: color .3s;
+          user-select: none;
+          &:hover {
+            color: #eb5055;
+            transition: color .3s;
+            animation: shake 5s infinite ease-in-out;
+          }
+          &.active {
+            color: #eb5055;
+            transition: color .3s;
+          }
+        }
+      }
+    }
+    .vemoji {
+      display: none;
+      user-select: none;
+      .vemoji-item {
+        display: inline-block;
+        margin: 5px 10px;
+        padding: 2px 4px;
+        box-shadow: 0 0 5px #666;
+        transition: all .1s;
+        border-radius: 5px;
+        animation: fade-in .5s;
+        animation-fill-mode: forwards;
+        transform: scale(0, 0);
+        &:hover {
+          box-shadow: 0 0 7px #222;
+          color: #eb5055;
+          transition: all .1s;
         }
       }
     }
@@ -424,5 +459,62 @@
       transform: scaleY(1.0);
       -webkit-transform: scaleY(1.0);
     }
+  }
+  @keyframes shake {
+    2% { transform: translateY(1.5px) rotate(1.5deg); }
+    4% { transform: translateY(-1.5px) rotate(-.5deg); }
+    6% { transform: translateY(1.5px) rotate(-1.5deg); }
+    8% { transform: translateY(-1.5px) rotate(-1.5deg); }
+    10% { transform: translateY(2.5px) rotate(1.5deg); }
+    12% { transform: translateY(-.5px) rotate(1.5deg); }
+    14% { transform: translateY(-1.5px) rotate(1.5deg); }
+    16% { transform: translateY(-.5px) rotate(-1.5deg); }
+    18% { transform: translateY(.5px) rotate(-1.5deg); }
+    20% { transform: translateY(-1.5px) rotate(2.5deg); }
+    22% { transform: translateY(.5px) rotate(-1.5deg); }
+    24% { transform: translateY(1.5px) rotate(1.5deg); }
+    26% { transform: translateY(.5px) rotate(.5deg); }
+    28% { transform: translateY(.5px) rotate(1.5deg); }
+    30% { transform: translateY(-.5px) rotate(2.5deg); }
+    32% { transform: translateY(1.5px) rotate(-.5deg); }
+    34% { transform: translateY(1.5px) rotate(-.5deg); }
+    36% { transform: translateY(-1.5px) rotate(2.5deg); }
+    38% { transform: translateY(1.5px) rotate(-1.5deg); }
+    40% { transform: translateY(-.5px) rotate(2.5deg); }
+    42% { transform: translateY(2.5px) rotate(-1.5deg); }
+    44% { transform: translateY(1.5px) rotate(.5deg); }
+    46% { transform: translateY(-1.5px) rotate(2.5deg); }
+    48% { transform: translateY(-.5px) rotate(.5deg); }
+    50% { transform: translateY(.5px) rotate(.5deg); }
+    52% { transform: translateY(2.5px) rotate(2.5deg); }
+    54% { transform: translateY(-1.5px) rotate(1.5deg); }
+    56% { transform: translateY(2.5px) rotate(2.5deg); }
+    58% { transform: translateY(.5px) rotate(2.5deg); }
+    60% { transform: translateY(2.5px) rotate(2.5deg); }
+    62% { transform: translateY(-.5px) rotate(2.5deg); }
+    64% { transform: translateY(-.5px) rotate(1.5deg); }
+    66% { transform: translateY(1.5px) rotate(-.5deg); }
+    68% { transform: translateY(-1.5px) rotate(-.5deg); }
+    70% { transform: translateY(1.5px) rotate(.5deg); }
+    72% { transform: translateY(2.5px) rotate(1.5deg); }
+    74% { transform: translateY(-.5px) rotate(.5deg); }
+    76% { transform: translateY(-.5px) rotate(2.5deg); }
+    78% { transform: translateY(-.5px) rotate(1.5deg); }
+    80% { transform: translateY(1.5px) rotate(1.5deg); }
+    82% { transform: translateY(-.5px) rotate(.5deg); }
+    84% { transform: translateY(1.5px) rotate(2.5deg); }
+    86% { transform: translateY(-1.5px) rotate(-1.5deg); }
+    88% { transform: translateY(-.5px) rotate(2.5deg); }
+    90% { transform: translateY(2.5px) rotate(-.5deg); }
+    92% { transform: translateY(.5px) rotate(-.5deg); }
+    94% { transform: translateY(2.5px) rotate(.5deg); }
+    96% { transform: translateY(-.5px) rotate(1.5deg); }
+    98% { transform: translateY(-1.5px) rotate(-.5deg); }
+    0%, to { transform: translate(0) rotate(0deg); }
+  }
+  @keyframes fade-in {
+    0% { transform: scale(0, 0); }
+    75% { transform: scale(1.02, 1.02); }
+    100% { transform: scale(1, 1); }
   }
 }
